--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"path-to-regexp": "^8.2.0",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
 		"uuid": "^11.1.0"
 	}
 }
